[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fundo preto.png" type="Texture" id=1]
[ext_resource path="res://assets/finanças.png" type="Texture" id=2]
[ext_resource path="res://Script/finanças.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 27
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="FundoPreto" type="Sprite" parent="."]
position = Vector2( 640, 358 )
scale = Vector2( 2.025, 2.05556 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_left = 960.0
margin_top = 56.0
margin_right = 1016.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinançasCiclo" type="Sprite" parent="Button"]
position = Vector2( -320, 304 )
scale = Vector2( 0.264572, 0.264609 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 648.0
margin_top = 256.0
margin_right = 880.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( -208, 104 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 672.0
margin_top = 320.0
margin_right = 880.0
margin_bottom = 360.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 648.0
margin_top = 392.0
margin_right = 864.0
margin_bottom = 432.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 712.0
margin_top = 456.0
margin_right = 928.0
margin_bottom = 496.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 632.0
margin_top = 520.0
margin_right = 840.0
margin_bottom = 560.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
